--- a/src/frontend/viz.css
+++ b/src/frontend/viz.css
@@ -1,8 +1,8 @@
-
 #deal {
     border: 1px solid black;
     width: 540px;
     height: 540px;
+    background-color: #beecef;
 }
 
 #north {
@@ -11,7 +11,6 @@
     left: 200px;
     width: 180px;
     height: 150px;
-    /*border: 1px solid black;*/
 }
 
 #west {
@@ -20,7 +19,6 @@
     left: 32px;
     width: 180px;
     height: 150px;
-    /*border: 1px solid black;*/
 }
 
 #east {
@@ -29,7 +27,6 @@
     left: 370px;
     width: 180px;
     height: 150px;
-    /*border: 1px solid black;*/
 }
 
 #south {
@@ -38,11 +35,9 @@
     left: 200px;
     width: 180px;
     height: 150px;
-    /*border: 1px solid black;*/
 }
 
 .suit {
-    /*border: 1px solid black;*/
     position: relative;
     margin-top: 3px;
     width: 99%;
@@ -53,7 +48,6 @@
 }
 
 #vul-north {
-    /*border: 1px solid black;*/
     position: absolute;
     top: 32px;
     left: 52px;
@@ -62,7 +56,6 @@
 }
 
 #vul-west {
-    /*border: 1px solid black;*/
     position: absolute;
     top: 52px;
     left: 32px;
@@ -71,7 +64,6 @@
 }
 
 #vul-south {
-    /*border: 1px solid black;*/
     position: absolute;
     top: 92px;
     left: 52px;
@@ -80,7 +72,6 @@
 }
 
 #vul-east {
-    /*border: 1px solid black;*/
     position: absolute;
     top: 52px;
     left: 92px;
@@ -96,18 +87,16 @@
     background-color: white;
 }
 
-#deal {
-    background-color: #beecef;
-}
-
-#vul-north .dealer, #vul-south .dealer {
+#vul-north .dealer,
+#vul-south .dealer {
     margin: auto;
     position: absolute;
     top: 2px;
     left: 14px;
 }
 
-#vul-west .dealer, #vul-east .dealer {
+#vul-west .dealer,
+#vul-east .dealer {
     margin: auto;
     position: absolute;
     top: 11px;
@@ -257,7 +246,7 @@ th {
     color: white;
     font-size: 24px;
     font-weight: bold;
-    font-family: arial;
+    font-family: Arial, sans-serif;
 }
 
 #info td.candidate-card {
