--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -151,6 +151,17 @@ body {
     font-family: sans-serif;
 }
 
+#boardno {
+    position: absolute;
+    border: 1px solid black;
+    border-radius: 3px;
+    left: 58px;
+    top: 62px;
+    width: 26px;
+    text-align: center;
+    background-color: #efcdf5e0;
+}
+
 #auction table {
     width: 100%;
 }
