--- a/demo/viz.css
+++ b/demo/viz.css
@@ -199,8 +199,14 @@
     position: absolute;
     border: 1px solid black;
     border-radius: 3px;
-    left: 358px;
-    top: 32px;
+    left: 378px;
+    top: 16px;
+    background-color: #efcdf5e0;
+}
+
+.bid {
+    border: 1px solid black;
+    border-radius: 3px;
     background-color: #efcdf5e0;
 }
 
@@ -272,4 +278,14 @@ th {
     position: absolute;
     top: 0px;
     left: 560px;
+}
+
+.samples {
+    cursor: pointer;
+    color: blue;
+    text-decoration: underline;
+}
+
+.hidden {
+    display: none;
 }
