--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -1,7 +1,8 @@
  
 .container {
-    max-width: 1200px; /* Adjust max-width as needed */
-    margin: 0 auto; /* Center the container */
+    max-width: 90%;
+    margin: 10 auto;
+    padding-right: 20px; /* Adjust padding to separate content from border */
 }
 
 form {
@@ -14,12 +15,21 @@ form {
     column-count: 3; /* Set the number of columns */
     column-gap: 20px; /* Adjust the gap between columns */
 }
-  
+
+.border {
+    padding: 3px;
+    border: 1px solid #333; /* Add a border on the right side */
+}
+
+.content p {
+    break-inside: avoid-column; /* Prevent column breaks inside paragraphs */
+    margin: 0; /* Remove default margins */
+}
+
 p {
     margin: 0 0 20px; /* Margin between paragraphs */
 }
 
-  
 *, *::after, *::before {
     box-sizing: border-box;
 }
@@ -36,12 +46,11 @@ body {
 
 #container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
-    height: 80vh;
-    max-width: 60rem;
-    min-height: 40rem;
-}
+    grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr) minmax(200px, 1fr)  minmax(200px, 1fr);
+    grid-template-rows: minmax(100px, 1fr) minmax(300px, 3fr) minmax(100px, 1fr) minmax(100px, 1fr);
+    max-height: 700px; /* Set a maximum height for the container */
+    max-width: 96%;
+    gap: 10px; /* Add spacing between grid items */}
 
 #north, #south {
     grid-column: span 3;
@@ -51,13 +60,22 @@ body {
     justify-content: center
 }
 
+#bidding {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: center
+}
+
 #west, #east {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2.4rem;
+    flex-direction: column; /* Update to column direction for vertical stacking */
+    align-items: flex-start; /* Adjust alignment as needed */
+    justify-content: flex-start; /* Adjust justification as needed */
+    font-size: 3rem;
     font-family: sans-serif;
 }
+
 
 #north {
     align-items: flex-end;
@@ -91,25 +109,30 @@ body {
     font-weight: bolder;
 }
 
-.card {
-    height: 6rem;
-    width: 8%;
+.card, .empty-suit {
+    height: 4.5rem;
+    width: 3rem;
     max-width: 4.4rem;
     border: 1px solid black;
     border-radius: 5px;
     margin-left: 2px;
-    font-size: 2rem;
+    font-size: 1.7rem;
     justify-content: center;
     display: flex;
     align-items: flex-end;
     background-color: white;
+    z-index: 100;
+}
+
+.empty-suit {
+    visibility: hidden; /* Hide the content but keep the space */
 }
 
 .card::before {
     content: attr(data-value);
     position: relative;
-    top: -3rem;
-    font-size: 2.5rem;
+    top: -2rem;
+    font-size: 2rem;
     font-family: sans-serif;
     font-weight: bold;
 }
@@ -158,6 +181,7 @@ body {
 }
 
 #auction {
+    grid-row: span 2;
     border: 1px solid black;
     border-radius: 3px;
     background-color: #efcdf5e0;
@@ -204,8 +228,8 @@ body {
     font-family: sans-serif;
     font-size: 2rem;
     background-color: white;
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
     text-align: center;
 }
 
