Updates to appserver and play validation

--- a/demo/viz.css
+++ b/demo/viz.css
@@ -1,4 +1,3 @@
-
 #deal {
     border: 1px solid black;
     width: 540px;
@@ -45,7 +44,7 @@
     height: 18%;
     padding-top: 4px;
     font-size: 24px;
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 #vul-north {
@@ -103,7 +102,7 @@
 }
 
 .dealer {
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .font-red {
@@ -188,7 +187,7 @@
     height: 28px;
     font-size: 20px;
     text-align: center;
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .trick-card.highlight {
@@ -288,4 +287,10 @@ th {
 
 .hidden {
     display: none;
+}
+
+form {
+    width: 100%;
+    display: block;
+    /* Ensure the form takes up the full width */
 }
