--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -1,10 +1,3 @@
- 
-.container {
-    max-width: 90%;
-    margin: 10 auto;
-    padding-right: 20px; /* Adjust padding to separate content from border */
-}
-
 form {
     width: 100%;
     display: block;
@@ -53,7 +46,7 @@ body {
     display: grid;
     grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr) minmax(200px, 1fr)  minmax(200px, 1fr);
     grid-template-rows: minmax(100px, 1fr) minmax(300px, 3fr) minmax(100px, 1fr) minmax(100px, 1fr);
-    max-height: 700px; /* Set a maximum height for the container */
+    height: 700px; /* Set a maximum height for the container */
     max-width: 96%;
     gap: 10px; /* Add spacing between grid items */}
 
