Updated version of PIMC and updated boards for bidding generation.

--- a/src/frontend/viz.css
+++ b/src/frontend/viz.css
@@ -1,7 +1,7 @@
 #dealdiv {
     border: 1px solid black;
     width: 540px;
-    height: 540px;
+    min-height: 540px;
     background-color: #beecef;
 }
 
