Alert and explanations

--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -357,6 +357,11 @@ body {
     background-color: yellowgreen;
 }
 
+#bidding-box .alert {
+    background-color: blue;
+    color: white;
+}
+
 #bidding-box .double {
     background-color: red;
 }
