--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -531,6 +531,7 @@ span.bba {
 .tooltip {
     display: none;
     position: absolute;
+    top: -20px;
     background-color: white;
     border: 1px solid black;
     padding: 5px;
