--- a/src/frontend/viz.css
+++ b/src/frontend/viz.css
@@ -373,6 +373,7 @@ form {
 .tooltip {
     display: none;
     position: absolute;
+    top: -20px;
     background-color: white;
     border: 1px solid black;
     padding: 5px;
